# msa-sprint2

./: .gitignore  Hotelio.sln  docker-compose.yml  launchSettings.json
tasks/task2/booking-history-service/: Dockerfile  build.gradle  consumer.py  go.mod  index.js  main.go  main.py  models.py  package.json  pom.xml  pyproject.toml  requirements.txt  settings.gradle
tasks/task2/booking-history-service/app/: client.py  config.py  kafka_consumer.py  main.py  models.py
tasks/task2/booking-history-service/internal/app/: config.go  consumer.go
tasks/task2/booking-history-service/internal/consumer/: kafka.go
tasks/task2/booking-history-service/internal/db/: driver_import.go  (+1 more)
tasks/task2/booking-history-service/server/: main.go
tasks/task2/booking-history-service/src/: consumer.js  main.py  migrations.sql
tasks/task2/booking-service/: .gitignore  Dockerfile  Makefile  build.gradle  go.mod  go.sum  grpc-client.js  index.js  main.go  package.json  pom.xml  pyproject.toml  requirements.txt  start.sh
tasks/task2/booking-service/api/: booking.proto
tasks/task2/booking-service/app/: booking_pb2_grpc.py  booking_service.py  client.py  config.py  grpc_server.py  kafka_prod.py  kafka_producer.py  models.py  rest_api.py  server.py
tasks/task2/booking-service/migrations/: 01_create_booking_table.sql
tasks/task2/booking-service/proto/: booking.pb.go  booking.proto  booking_grpc.pb.go
tasks/task2/booking-service/scripts/: list-bookings.js
tasks/task2/booking-service/server/: main.go  service.go
tasks/task2/booking-service/src/: main.py  migrations.sql  server.js
(+1186 files in other folders)
